# design.md

./: .gitignore  Cargo.toml  DESIGN-CODEMOD.md  DESIGN-JETBRAINS.md  DESIGN-LOGTO.md  DESIGN-NODEJS.md  DESIGN-NUXT.md  DESIGN-PNPM.md  DESIGN-ZED.md  README.md
designs/dataforest/: DESIGN.md
designs/elpatita/: DESIGN.md
designs/neon/: DESIGN.md
src/: main.rs  models.rs  utils.rs
src/commands/: build.rs  lint.rs  list.rs  mod.rs  new_.rs  show.rs
src/lint/: contrast.rs  mod.rs  structure.rs
src/site/: assets.rs  mod.rs  renderer.rs
template/: DESIGN-TEMPLATE.md
