[package]
name = "design-md"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for managing, linting, and validating design system documentation."

[dependencies]
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
walkdir = "2"
colored = "2"
regex = "1"
anyhow = "1"
